# ansible-role-rdo-kolla-build

./: .gitreview  .zuul.yaml  README.rst  groups  project.config  requirements.txt  setup.cfg  tag-promotion.yml  test-requirements.txt  tox.ini
defaults/: main.yml
files/: build-mirror-start.sh  docker-network  docker-override.conf  docker-storage  docker.sysconfig  k8s_image_tag_filter.py  k8s_image_tag_pruner.py
handlers/: main.yml
meta/: main.yml
tasks/: build-mirror.yml  build.yml  docker.yml  kolla.yml  main.yml  openshift.yml  push.yml  repositories.yml  tag.yml
templates/: build-mirror-Dockerfile.j2  build-mirror-config.sh.j2  build-mirror-reposync.sh.j2  docker-network  docker-storage  kolla-build.conf.j2  parsed_containers.j2  template-overrides.j2
