[metadata]
name = ansible-role-rdo-kolla-build
summary = ansible-role-rdo-kolla-build - A ansible role for building container images with kolla
author = RDO-infra
author-email = dmsimard@redhat.com
home-page = https://github.com/rdo-infra/ansible-role-rdo-kolla-build
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible/roles/rdo-kolla-build/defaults  = defaults/*
    usr/local/share/ansible/roles/rdo-kolla-build/handlers  = handlers/*
    usr/local/share/ansible/roles/rdo-kolla-build/library   = library/*
    usr/local/share/ansible/roles/rdo-kolla-build/meta      = meta/*
    usr/local/share/ansible/roles/rdo-kolla-build/tasks     = tasks/*
    usr/local/share/ansible/roles/rdo-kolla-build/templates = templates/*
    usr/local/share/ansible/roles/rdo-kolla-build/files     = files/*
    usr/local/share/ansible/roles/rdo-kolla-build/vars      = vars/*
    usr/local/share/ansible/roles/rdo-kolla-build/parts     = parts/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
